flowc/tests/fixtures/lex_e103_number_range.expected.err
tests/fixtures/lex_e103_number_range.flow:2:11: error[E103]: integer literal '99999999999999999999999999' is out of range
