flowc/tests/fixtures/lex_e103_number_range.flow
flow big(a: int) -> int {
  x = a + 99999999999999999999999999
  x
}
